--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,32 @@
 <resources>
     <string name="app_name">Weather</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="loading">Loading</string>
+    <string name="humidity">Humidity</string>
+    <string name="pressure">Pressure</string>
+    <string name="wind">Wind</string>
+    <string name="visibility">Visibility</string>
+    <string name="sunrise">Sunrise</string>
+    <string name="sunset">Sunset</string>
+    <string name="cloud_cover">Clouds cover</string>
+    <string name="aqi">AQI</string>
+    <string name="standard">Standard</string>
+    <string name="metric">Metric</string>
+    <string name="imperial">Imperial</string>
+    <string name="good">Good</string>
+    <string name="fair">Fair</string>
+    <string name="moderate">Moderate</string>
+    <string name="poor">Poor</string>
+    <string name="very_poor">Very Poor</string>
+    <string name="excellent">Excellent</string>
+    <string name="severe">Severe</string>
+    <string name="hazard">Hazardous</string>
+    <string name="pm10">PM₁₀</string>
+    <string name="pm2_5">PM₂.₅</string>
+    <string name="no">NO</string>
+    <string name="no2">NO₂</string>
+    <string name="o3">O₃</string>
+    <string name="co">CO</string>
+    <string name="so2">SO₂</string>
+    <string name="nh3">NH₃</string>
+    <string name="satisfactory">Satisfactory</string>
 </resources>
